[package]
name = "package-track"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = { version = "0.20.2", features = ["https"], default-features = false }
sqlx = { version = "0.8.6", features = ["macros", "migrate", "postgres", "runtime-tokio"], default-features = false }
lettre = { version = "0.11.16", features = [ "builder", "smtp-transport", "tokio1-native-tls" ], default-features = false }
tokio = { version = "1.48.0", features = ["full"], default-features = false }
thiserror = { version = "2.0.17", default-features = false }
regex = { version = "1.12.2", features = ["unicode-perl"], default-features = false }
anyhow = { version = "1.0.100", default-features = false }
